# html-webcloner

./: README.md
backend/: .env  main.py  pyproject.toml  requirements.txt  test_api.py
backend/app/: main.py
backend/app/routers/: website_clone.py  website_clone_router.py
backend/app/services/: website_clone_service.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
