[project]
name = "backend"
version = "0.1.0"
description = "Website cloning backend service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.27.1",
    "playwright>=1.42.0",
    "langchain>=0.1.12",
    "langchain-anthropic>=0.1.4",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.3",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
    "aiohttp>=3.9.3",
    "pillow>=10.2.0",
    "anthropic>=0.18.1"
]
